--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="J2yaFx6yY1ToflJmsBMyOdRKiZolrkQU0fSVLgR4wu0" />
+    <meta name="description" content="Your daily essentials, delivered in minutes – fast, reliable, and hassle-free!" />
+    <meta name="keywords" content="Experience the convenience of quick home delivery for all your essential groceries, making online shopping effortless and speedy." />
     <meta property="og:image" content="hhttps://images.crunchbase.com/image/upload/c_pad,f_auto,q_auto:eco,dpr_1/ozrgpc6hulbfxyi1zeqd" />
-      <meta property="og:title" content="Everything delivered in minutes" />
+    <meta property="og:title" content="Everything delivered in minutes" />
     <link rel="shortcut icon" href="https://images.crunchbase.com/image/upload/c_pad,f_auto,q_auto:eco,dpr_1/ozrgpc6hulbfxyi1zeqd" type="image/x-icon">
     <title>Blinkit Shop</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
